# SmartFarm

./: Makefile  README.md  SmartFarm.glade  SmartFarm.gladep.bak  config.status
autom4te.cache/: requests
src/: Absent.txt  Makefile  Makefile.am  Makefile.in  abs.c  absenteisme.txt  atelier  callbacks.c  callbacks.h  equip.c  equip.h  equipement.txt  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h  main.c  marque.txt  moy.txt  nb.c  nb.h  nb.txt  ouvrier.c  ouvrier.h  ouvrier.txt  reclamation.txt  troupeaux.c  troupeaux.h  troupeaux.txt  utilisateur.txt
src/.deps/: callbacks.Po
